Fix main height and overflow config in style.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,12 +39,13 @@ main {
     margin-top: 80px;
     margin-bottom: 56px;
     height: calc(100vh - 137px);
+    overflow: scroll;
 }
 
 /* Map */
 
 #map-embed {
-    height: 100%;
+    height: calc(100% - 46px);
     width: 100%;
     position: relative;
     z-index: 0;
